feat: Implement remote database initialization, API URL configuration, and Render deployment setup.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,30 @@
 venv
 .env
+# OS generated files
+.DS_Store
+.Trashes
+ehthumbs.db
+Thumbs.db
+Desktop.ini
+
+# Python
+__pycache__/
+*.pyc
+*.pyd
+*.pyo
+*.egg-info/
+.pytest_cache/
+.mypy_cache/
+.ipynb_checkpoints/
+.ruff_cache/
+
+# Editor/IDE files
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+*.swp
+*~
+# Logs
+*.log
+
